--- a/src/main/resources/spring/database.properties
+++ b/src/main/resources/spring/database.properties
@@ -1,4 +1,4 @@
 database.driverClassName=oracle.jdbc.driver.OracleDriver
-database.url=jdbc:oracle:thin:@172.22.118.83:1521/MMH
-database.username=KORE_OTSB
-database.password=KORE_OTSB
+database.url=jdbc:oracle:thin:@XXX.XX.XX.XX:1521/SAMPLE
+database.username=SAMPLE
+database.password=SAMPLE
